--- a/light/maqueta.html
+++ b/light/maqueta.html
@@ -17,6 +17,7 @@
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
     <link href="../assets/css/toolkit-light.css" rel="stylesheet">
     <link href="../assets/css/application.css" rel="stylesheet">
+    <link href="assets/css/application.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <style>
