--- a/light/maqueta.html
+++ b/light/maqueta.html
@@ -460,7 +460,8 @@
 
 
     <script src="assets/js/jquery.min.js"></script>
-
+    <script src="js/libreria.js"></script>
+     
     <script type="text/javascript">
       var transition = 200;
       var easing="easeInCirc";
