valores reales a indicadores

--- a/light/maqueta.html
+++ b/light/maqueta.html
@@ -189,10 +189,10 @@
   <div class="col-sm-6 col-lg-3 m-b">
     <div class="statcard statcard-success">
       <div class="p-a">
-        <span class="statcard-desc">OPTIMIZARON</span>
+        <span class="statcard-desc">PRECIO $/KWH ACTUAL BT1</span>
         <h2 class="statcard-number">
-          12,938
-          <small class="delta-indicator delta-positive">5%</small>
+          103.32
+          <small class="delta-indicator delta-negative">1.3%</small>
         </h2>
         <hr class="statcard-hr m-b-0">
       </div>
@@ -202,10 +202,10 @@
   <div class="col-sm-6 col-lg-3 m-b">
     <div class="statcard statcard-danger">
       <div class="p-a">
-        <span class="statcard-desc">AUMENTARON</span>
+        <span class="statcard-desc">PRECIO $/KWH ACTUAL</span>
         <h2 class="statcard-number">
-          758
-          <small class="delta-indicator delta-negative">1.3%</small>
+          64.76
+          <small class="delta-indicator delta-positive">0.8%</small>
         </h2>
         <hr class="statcard-hr m-b-0">
       </div>
@@ -215,10 +215,10 @@
   <div class="col-sm-6 col-lg-3 m-b">
     <div class="statcard statcard-info">
       <div class="p-a">
-        <span class="statcard-desc">MANTUVIERON</span>
+        <span class="statcard-desc">PRECIO $/KW FUERA PUNTA</span>
         <h2 class="statcard-number">
-          1,293
-          <small class="delta-indicator delta-positive">6.75%</small>
+          2,516
+          <small class="delta-indicator delta-negative">0.1%</small>
         </h2>
         <hr class="statcard-hr m-b-0">
       </div>
@@ -228,10 +228,10 @@
   <div class="col-sm-6 col-lg-3 m-b">
     <div class="statcard statcard-warning">
       <div class="p-a">
-        <span class="statcard-desc">RIESGO DE AUMENTO</span>
+        <span class="statcard-desc">PRECIO $/KW HORA PUNTA</span>
         <h2 class="statcard-number">
-          758
-          <small class="delta-indicator delta-negative">1.3%</small>
+          8,667
+          <small class="delta-indicator delta-positive">0.6%</small>
         </h2>
         <hr class="statcard-hr m-b-0">
       </div>
