Cambio 'Demanda' por 'Distribucion'

--- a/light/maqueta.html
+++ b/light/maqueta.html
@@ -161,7 +161,7 @@
       <img src="assets/img/PublicDistrib.png" class="pub toggleable" width="266" height="200" style="display: none;" />
     </div>
     <strong class="text-muted">Costo $</strong>
-    <h3>Demanda</h3>
+    <h3>Distribución</h3>
   </div>
 </div>
 <div class="hr-divider m-t-md m-b">
